chore: trigger envio deploy with old envio version

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "envio": "v2.28.0-alpha.3",
+    "envio": "2.27.6",
     "viem": "^2.33.3"
   },
   "optionalDependencies": {
