--- a/config.yaml
+++ b/config.yaml
@@ -53,6 +53,17 @@ contracts:
     events:
       - event: Pool(address indexed token0, address indexed token1, address pool)
       - event: CustomPool(address indexed deployer, address indexed token0, address indexed token1, address pool)
+      - event: DefaultTickspacing(int24 newDefaultTickspacing)
+      - event: DefaultFee(uint16 newDefaultFee)
+
+  - name: KittenSwapAlgebraFactory
+    abi_file_path: ./abis/factories/AlgebraFactory_1_2_2.json
+    handler: ./src/v3-pools/mappings/factory/dexs/kittenswap-algebra-factory.ts
+    events:
+      - event: Pool(address indexed token0, address indexed token1, address pool)
+      - event: CustomPool(address indexed deployer, address indexed token0, address indexed token1, address pool)
+      - event: DefaultTickspacing(int24 newDefaultTickspacing)
+      - event: DefaultFee(uint16 newDefaultFee)
 
   - name: AlgebraPool_1_2_1
     abi_file_path: ./abis/pools/AlgebraPool_1_2_1.json
@@ -64,6 +75,18 @@ contracts:
       - event: Swap(address indexed sender, address indexed recipient, int256 amount0, int256 amount1, uint160 price, uint128 liquidity, int24 tick, uint24 overrideFee, uint24 pluginFee)
       - event: Fee(uint16 fee)
       - event: TickSpacing(int24 newTickSpacing)
+
+  - name: AlgebraPool_1_2_2
+    abi_file_path: ./abis/pools/AlgebraPool_1_2_2.json
+    handler: ./src/v3-pools/mappings/pool/algebra/v1.2.2/index.ts
+    events:
+      - event: Mint(address sender, address indexed owner, int24 indexed bottomTick, int24 indexed topTick, uint128 liquidityAmount, uint256 amount0, uint256 amount1)
+      - event: Initialize(uint160 price, int24 tick)
+      - event: Collect(address indexed owner, address recipient, int24 indexed bottomTick, int24 indexed topTick, uint128 amount0, uint128 amount1)
+      - event: Swap(address indexed sender, address indexed recipient, int256 amount0, int256 amount1, uint160 price, uint128 liquidity, int24 tick)
+      - event: Fee(uint16 fee)
+      - event: TickSpacing(int24 newTickSpacing)
+      - event: SwapFee(address indexed sender, uint24 overrideFee, uint24 pluginFee)
 
   - name: UniswapV3Pool
     abi_file_path: ./abis/pools/UniswapV3Pool.json
@@ -164,18 +187,18 @@ contracts:
       - event: Swap(bytes32 indexed id, address indexed sender, int128 amount0, int128 amount1, uint160 sqrtPriceX96, uint128 liquidity, int24 tick, uint24 fee)
 
 networks:
-  # - id: 11155111 # Ethereum Sepolia
-  #   start_block: 3518269
-  #   confirmed_block_threshold: 12
-  #   contracts:
-  #     - name: UniswapV3Factory
-  #       address: 0x0227628f3F023bb0B980b67D528571c95c6DaC1c
-  #     - name: UniswapV3Pool
-  #     - name: PancakeSwapV3Factory
-  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-  #     - name: PancakeSwapV3Pool
-  #     - name: UniswapV4PoolManager
-  #       address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
+  - id: 11155111 # Ethereum Sepolia
+    start_block: 3518269
+    confirmed_block_threshold: 12
+    contracts:
+      - name: UniswapV3Factory
+        address: 0x0227628f3F023bb0B980b67D528571c95c6DaC1c
+      - name: UniswapV3Pool
+      - name: PancakeSwapV3Factory
+        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+      - name: PancakeSwapV3Pool
+      - name: UniswapV4PoolManager
+        address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
   # - id: 1 # Ethereum Mainnet
   #   start_block: 12369621
   #   confirmed_block_threshold: 12
@@ -190,70 +213,73 @@ networks:
   #       address: "0x000000000004444c5dc75cB358380D2e3dE08A90"
   #     - name: PancakeSwapV3Pool
   #     - name: UniswapV3Pool
-  # - id: 534352 # Scroll Mainnet
-  #   start_block: 1367
-  #   confirmed_block_threshold: 5
-  #   contracts:
-  #     - name: ZebraProtocolV3Factory
-  #       address: 0x96a7F53f7636c93735bf85dE416A4Ace94B56Bd9
-  #     - name: SushiSwapV3Factory
-  #       address: 0x46B3fDF7b5CDe91Ac049936bF0bDb12c5d22202e
-  #     - name: OkuV3Factory
-  #       address: 0x70C62C8b8e801124A4Aa81ce07b637A3e83cb919
-  #     - name: HoneyPopV3Factory
-  #       address: 0x1d25AF2b0992bf227b350860Ea80Bad47382CAf6
-  #     - name: UniswapV3Pool
-  # - id: 130 # Unichain
-  #   start_block: 0
-  #   confirmed_block_threshold: 200
-  #   contracts:
-  #     - name: UniswapV4PoolManager
-  #       address: 0x1f98400000000000000000000000000000000004
-  #     - name: UniswapV3Factory
-  #       address: 0x1f98400000000000000000000000000000000003
-  #     - name: VelodromeV3Factory
-  #       address: 0x04625B046C69577EfC40e6c0Bb83CDBAfab5a55F
-  #     - name: UniswapV3Pool
-  #     - name: AerodromeV3Pool
-  # - id: 999 # HyperEVM
-  #   start_block: 11648
-  #   confirmed_block_threshold: 6
-  #   hypersync_config:
-  #     url: https://hyperliquid.hypersync.xyz/
-  #   contracts:
-  #     - name: HyperSwapV3Factory
-  #       address: 0xB1c0fa0B789320044A6F623cFe5eBda9562602E3
-  #     - name: ProjectXV3Factory
-  #       address: 0xFf7B3e8C00e57ea31477c32A5B52a58Eea47b072
-  #     - name: HybraV3Factory
-  #       address: 0x2dC0Ec0F0db8bAF250eCccF268D7dFbF59346E5E
-  #     - name: GLiquidAlgebraFactory
-  #       address: 0x10253594A832f967994b44f33411940533302ACb
-  #     - name: UniswapV3Pool
-  #     - name: AlgebraPool_1_2_1
-  - id: 8453 # Base
-    start_block: 1371680
+  - id: 534352 # Scroll Mainnet
+    start_block: 1367
+    confirmed_block_threshold: 5
+    contracts:
+      - name: ZebraProtocolV3Factory
+        address: 0x96a7F53f7636c93735bf85dE416A4Ace94B56Bd9
+      - name: SushiSwapV3Factory
+        address: 0x46B3fDF7b5CDe91Ac049936bF0bDb12c5d22202e
+      - name: OkuV3Factory
+        address: 0x70C62C8b8e801124A4Aa81ce07b637A3e83cb919
+      - name: HoneyPopV3Factory
+        address: 0x1d25AF2b0992bf227b350860Ea80Bad47382CAf6
+      - name: UniswapV3Pool
+  - id: 130 # Unichain
+    start_block: 0
     confirmed_block_threshold: 200
     contracts:
-      - name: AerodromeV3Factory
-        address: 0x5e7BB104d84c7CB9B682AaC2F3d509f5F406809A
-      - name: UniswapV3Factory
-        address: 0x33128a8fC17869897dcE68Ed026d694621f6FDfD
-      - name: PancakeSwapV3Factory
-        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-      - name: SushiSwapV3Factory
-        address: 0xc35DADB65012eC5796536bD9864eD8773aBc74C4
-      - name: BaseSwapV3Factory
-        address: 0x38015D05f4fEC8AFe15D7cc0386a126574e8077B
-      - name: AlienBaseV3Factory
-        address: 0x0Fd83557b2be93617c9C1C1B6fd549401C74558C
       - name: UniswapV4PoolManager
-        address: 0x498581fF718922c3f8e6A244956aF099B2652b2b
-      - name: PancakeSwapV4CLPoolManager
-        address: 0xa0FfB9c1CE1Fe56963B0321B32E7A0302114058b
-      - name: AerodromeV3Pool
+        address: 0x1f98400000000000000000000000000000000004
+      - name: UniswapV3Factory
+        address: 0x1f98400000000000000000000000000000000003
+      - name: VelodromeV3Factory
+        address: 0x04625B046C69577EfC40e6c0Bb83CDBAfab5a55F
       - name: UniswapV3Pool
-      - name: PancakeSwapV3Pool
+      - name: AerodromeV3Pool
+  - id: 999 # HyperEVM
+    start_block: 11648
+    confirmed_block_threshold: 6
+    hypersync_config:
+      url: https://hyperliquid.hypersync.xyz/
+    contracts:
+      - name: HyperSwapV3Factory
+        address: 0xB1c0fa0B789320044A6F623cFe5eBda9562602E3
+      - name: ProjectXV3Factory
+        address: 0xFf7B3e8C00e57ea31477c32A5B52a58Eea47b072
+      - name: HybraV3Factory
+        address: 0x2dC0Ec0F0db8bAF250eCccF268D7dFbF59346E5E
+      - name: GLiquidAlgebraFactory
+        address: 0x10253594A832f967994b44f33411940533302ACb
+      - name: KittenSwapAlgebraFactory
+        address: 0x5f95E92c338e6453111Fc55ee66D4AafccE661A7
+      - name: UniswapV3Pool
+      - name: AlgebraPool_1_2_1
+      - name: AlgebraPool_1_2_2
+  # - id: 8453 # Base
+  #   start_block: 1371680
+  #   confirmed_block_threshold: 200
+  #   contracts:
+  #     - name: AerodromeV3Factory
+  #       address: 0x5e7BB104d84c7CB9B682AaC2F3d509f5F406809A
+  #     - name: UniswapV3Factory
+  #       address: 0x33128a8fC17869897dcE68Ed026d694621f6FDfD
+  #     - name: PancakeSwapV3Factory
+  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+  #     - name: SushiSwapV3Factory
+  #       address: 0xc35DADB65012eC5796536bD9864eD8773aBc74C4
+  #     - name: BaseSwapV3Factory
+  #       address: 0x38015D05f4fEC8AFe15D7cc0386a126574e8077B
+  #     - name: AlienBaseV3Factory
+  #       address: 0x0Fd83557b2be93617c9C1C1B6fd549401C74558C
+  #     - name: UniswapV4PoolManager
+  #       address: 0x498581fF718922c3f8e6A244956aF099B2652b2b
+  #     - name: PancakeSwapV4CLPoolManager
+  #       address: 0xa0FfB9c1CE1Fe56963B0321B32E7A0302114058b
+  #     - name: AerodromeV3Pool
+  #     - name: UniswapV3Pool
+  #     - name: PancakeSwapV3Pool
 
 unordered_multichain_mode: true
 preload_handlers: true
