trigger deploy excluding base and hyperevm

--- a/config.yaml
+++ b/config.yaml
@@ -161,6 +161,12 @@ contracts:
       - event: CollectProtocol(address indexed sender, address indexed recipient, uint128 amount0, uint128 amount1)
       - event: Burn(address indexed owner, int24 indexed tickLower, int24 indexed tickUpper, uint128 amount, uint256 amount0, uint256 amount1)
 
+  # - name: UpheavalV3Factory
+  #   abi_file_path: ./abis/factories/PancakeSwapV3Factory.json
+  #   handler: ./src/v3-pools/mappings/factory/dexs/upheaval-v3-factory.ts
+  #   events:
+  #     - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
+
   - name: SushiSwapV3Factory
     abi_file_path: ./abis/factories/UniswapV3Factory.json
     handler: ./src/v3-pools/mappings/factory/dexs/sushi-swap-v3-factory.ts
@@ -202,21 +208,21 @@ networks:
         address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
       - name: UniswapV3Pool
       - name: PancakeSwapV3Pool
-  - id: 1 # Ethereum Mainnet
-    start_block: 12369621
-    confirmed_block_threshold: 12
-    contracts:
-      - name: UniswapV3Factory
-        address: 0x1F98431c8aD98523631AE4a59f267346ea31F984
-      - name: PancakeSwapV3Factory
-        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-      - name: SushiSwapV3Factory
-        address: 0xbACEB8eC6b9355Dfc0269C18bac9d6E2Bdc29C4F
-      - name: UniswapV4PoolManager
-        address: "0x000000000004444c5dc75cB358380D2e3dE08A90"
-      - name: PancakeSwapV3Pool
-      - name: UniswapV3Pool
-      - name: UniswapV2Pool
+  # - id: 1 # Ethereum Mainnet
+  #   start_block: 12369621
+  #   confirmed_block_threshold: 12
+  #   contracts:
+  #     - name: UniswapV3Factory
+  #       address: 0x1F98431c8aD98523631AE4a59f267346ea31F984
+  #     - name: PancakeSwapV3Factory
+  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+  #     - name: SushiSwapV3Factory
+  #       address: 0xbACEB8eC6b9355Dfc0269C18bac9d6E2Bdc29C4F
+  #     - name: UniswapV4PoolManager
+  #       address: "0x000000000004444c5dc75cB358380D2e3dE08A90"
+  #     - name: PancakeSwapV3Pool
+  #     - name: UniswapV3Pool
+  #     - name: UniswapV2Pool
   - id: 534352 # Scroll Mainnet
     start_block: 1367
     confirmed_block_threshold: 5
