--- a/config.yaml
+++ b/config.yaml
@@ -208,21 +208,21 @@ networks:
         address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
       - name: UniswapV3Pool
       - name: PancakeSwapV3Pool
-  # - id: 1 # Ethereum Mainnet
-  #   start_block: 12369621
-  #   confirmed_block_threshold: 12
-  #   contracts:
-  #     - name: UniswapV3Factory
-  #       address: 0x1F98431c8aD98523631AE4a59f267346ea31F984
-  #     - name: PancakeSwapV3Factory
-  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-  #     - name: SushiSwapV3Factory
-  #       address: 0xbACEB8eC6b9355Dfc0269C18bac9d6E2Bdc29C4F
-  #     - name: UniswapV4PoolManager
-  #       address: "0x000000000004444c5dc75cB358380D2e3dE08A90"
-  #     - name: PancakeSwapV3Pool
-  #     - name: UniswapV3Pool
-  #     - name: UniswapV2Pool
+  - id: 1 # Ethereum Mainnet
+    start_block: 12369621
+    confirmed_block_threshold: 12
+    contracts:
+      - name: UniswapV3Factory
+        address: 0x1F98431c8aD98523631AE4a59f267346ea31F984
+      - name: PancakeSwapV3Factory
+        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+      - name: SushiSwapV3Factory
+        address: 0xbACEB8eC6b9355Dfc0269C18bac9d6E2Bdc29C4F
+      - name: UniswapV4PoolManager
+        address: "0x000000000004444c5dc75cB358380D2e3dE08A90"
+      - name: PancakeSwapV3Pool
+      - name: UniswapV3Pool
+      - name: UniswapV2Pool
   - id: 534352 # Scroll Mainnet
     start_block: 1367
     confirmed_block_threshold: 5
@@ -267,30 +267,30 @@ networks:
       - name: UniswapV3Pool
       - name: AlgebraPool_1_2_1
       - name: AlgebraPool_1_2_2
-  # - id: 8453 # Base
-  #   start_block: 1371680
-  #   confirmed_block_threshold: 200
-  #   contracts:
-  #     - name: AerodromeV3Factory
-  #       address: 0x5e7BB104d84c7CB9B682AaC2F3d509f5F406809A
-  #     - name: UniswapV3Factory
-  #       address: 0x33128a8fC17869897dcE68Ed026d694621f6FDfD
-  #     - name: PancakeSwapV3Factory
-  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-  #     - name: SushiSwapV3Factory
-  #       address: 0xc35DADB65012eC5796536bD9864eD8773aBc74C4
-  #     - name: BaseSwapV3Factory
-  #       address: 0x38015D05f4fEC8AFe15D7cc0386a126574e8077B
-  #     - name: AlienBaseV3Factory
-  #       address: 0x0Fd83557b2be93617c9C1C1B6fd549401C74558C
-  #     - name: UniswapV4PoolManager
-  #       address: 0x498581fF718922c3f8e6A244956aF099B2652b2b
-  #     - name: PancakeSwapV4CLPoolManager
-  #       address: 0xa0FfB9c1CE1Fe56963B0321B32E7A0302114058b
-  #     - name: AerodromeV3Pool
-  #     - name: UniswapV3Pool
-  #     - name: PancakeSwapV3Pool
-  - id: 9745
+  - id: 8453 # Base
+    start_block: 1371680
+    confirmed_block_threshold: 200
+    contracts:
+      - name: AerodromeV3Factory
+        address: 0x5e7BB104d84c7CB9B682AaC2F3d509f5F406809A
+      - name: UniswapV3Factory
+        address: 0x33128a8fC17869897dcE68Ed026d694621f6FDfD
+      - name: PancakeSwapV3Factory
+        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+      - name: SushiSwapV3Factory
+        address: 0xc35DADB65012eC5796536bD9864eD8773aBc74C4
+      - name: BaseSwapV3Factory
+        address: 0x38015D05f4fEC8AFe15D7cc0386a126574e8077B
+      - name: AlienBaseV3Factory
+        address: 0x0Fd83557b2be93617c9C1C1B6fd549401C74558C
+      - name: UniswapV4PoolManager
+        address: 0x498581fF718922c3f8e6A244956aF099B2652b2b
+      - name: PancakeSwapV4CLPoolManager
+        address: 0xa0FfB9c1CE1Fe56963B0321B32E7A0302114058b
+      - name: AerodromeV3Pool
+      - name: UniswapV3Pool
+      - name: PancakeSwapV3Pool
+  - id: 9745 # Plasma
     start_block: 430127
     confirmed_block_threshold: 200
     rpc:
