--- a/config.yaml
+++ b/config.yaml
@@ -290,15 +290,15 @@ networks:
   #     - name: AerodromeV3Pool
   #     - name: UniswapV3Pool
   #     - name: PancakeSwapV3Pool
-  - id: 9745 # Plasma
-    start_block: 430127
-    confirmed_block_threshold: 200
-    rpc_config:
-      url: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
-    contracts:
-      - name: OkuV3Factory
-        address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
-      - name: UniswapV3Pool
+  # - id: 9745 # Plasma
+  #   start_block: 430127
+  #   confirmed_block_threshold: 200
+  #   rpc_config:
+  #     url: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
+  #   contracts:
+  #     - name: OkuV3Factory
+  #       address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
+  #     - name: UniswapV3Pool
 
 unordered_multichain_mode: true
 preload_handlers: true
