--- a/config.yaml
+++ b/config.yaml
@@ -226,8 +226,6 @@ networks:
   - id: 534352 # Scroll Mainnet
     start_block: 1367
     confirmed_block_threshold: 5
-    hypersync_config:
-      url: https://scroll.hypersync.xyz/
     contracts:
       - name: ZebraProtocolV3Factory
         address: 0x96a7F53f7636c93735bf85dE416A4Ace94B56Bd9
@@ -241,8 +239,6 @@ networks:
   - id: 130 # Unichain
     start_block: 0
     confirmed_block_threshold: 200
-    hypersync_config:
-      url: https://unichain.hypersync.xyz/
     contracts:
       - name: UniswapV4PoolManager
         address: 0x1f98400000000000000000000000000000000004
@@ -255,8 +251,6 @@ networks:
   - id: 999 # HyperEVM
     start_block: 11648
     confirmed_block_threshold: 6
-    hypersync_config:
-      url: https://hyperliquid.hypersync.xyz/
     contracts:
       - name: HyperSwapV3Factory
         address: 0xB1c0fa0B789320044A6F623cFe5eBda9562602E3
@@ -294,15 +288,15 @@ networks:
   #     - name: AerodromeV3Pool
   #     - name: UniswapV3Pool
   #     - name: PancakeSwapV3Pool
-  - id: 9745 # Plasma
-    start_block: 430127
-    confirmed_block_threshold: 200
-    rpc_config:
-      url: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
-    contracts:
-      - name: OkuV3Factory
-        address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
-      - name: UniswapV3Pool
+  # - id: 9745 # Plasma
+  #   start_block: 430127
+  #   confirmed_block_threshold: 200
+  #   rpc_config:
+  #     url: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
+  #   contracts:
+  #     - name: OkuV3Factory
+  #       address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
+  #     - name: UniswapV3Pool
 
 unordered_multichain_mode: true
 preload_handlers: true
