--- a/config.yaml
+++ b/config.yaml
@@ -196,18 +196,18 @@ contracts:
       - event: Swap(bytes32 indexed id, address indexed sender, int128 amount0, int128 amount1, uint160 sqrtPriceX96, uint128 liquidity, int24 tick, uint24 fee)
 
 networks:
-  # - id: 11155111 # Ethereum Sepolia
-  #   start_block: 3518269
-  #   confirmed_block_threshold: 12
-  #   contracts:
-  #     - name: UniswapV3Factory
-  #       address: 0x0227628f3F023bb0B980b67D528571c95c6DaC1c
-  #     - name: PancakeSwapV3Factory
-  #       address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
-  #     - name: UniswapV4PoolManager
-  #       address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
-  #     - name: UniswapV3Pool
-  #     - name: PancakeSwapV3Pool
+  - id: 11155111 # Ethereum Sepolia
+    start_block: 3518269
+    confirmed_block_threshold: 12
+    contracts:
+      - name: UniswapV3Factory
+        address: 0x0227628f3F023bb0B980b67D528571c95c6DaC1c
+      - name: PancakeSwapV3Factory
+        address: 0x0BFbCF9fa4f9C56B0F40a671Ad40E0805A091865
+      - name: UniswapV4PoolManager
+        address: 0xE03A1074c86CFeDd5C142C4F04F1a1536e203543
+      - name: UniswapV3Pool
+      - name: PancakeSwapV3Pool
   # - id: 1 # Ethereum Mainnet
   #   start_block: 12369621
   #   confirmed_block_threshold: 12
@@ -291,7 +291,7 @@ networks:
   - id: 9745 # Plasma
     start_block: 430127
     confirmed_block_threshold: 180
-    rpc: https://rpc.plasma.to/
+    rpc: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
     contracts:
       - name: OkuV3Factory
         address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
