feat: add new DEXs (#7)

--- a/config.yaml
+++ b/config.yaml
@@ -61,6 +61,13 @@ contracts:
       - event: Pool(address indexed token0, address indexed token1, address pool)
       - event: CustomPool(address indexed deployer, address indexed token0, address indexed token1, address pool)
 
+  - name: HxFinanceAlgebraFactory
+    abi_file_path: ./abis/factories/AlgebraFactory_1_2_2.json
+    handler: ./src/v3-pools/mappings/factory/dexs/hx-finance-algebra-factory.ts
+    events:
+      - event: Pool(address indexed token0, address indexed token1, address pool)
+      - event: CustomPool(address indexed deployer, address indexed token0, address indexed token1, address pool)
+
   - name: AlgebraPool_1_2_1
     abi_file_path: ./abis/pools/AlgebraPool_1_2_1.json
     handler: ./src/v3-pools/mappings/pool/algebra/v1.2.1/index.ts
@@ -161,11 +168,17 @@ contracts:
       - event: CollectProtocol(address indexed sender, address indexed recipient, uint128 amount0, uint128 amount1)
       - event: Burn(address indexed owner, int24 indexed tickLower, int24 indexed tickUpper, uint128 amount, uint256 amount0, uint256 amount1)
 
-  # - name: UpheavalV3Factory
-  #   abi_file_path: ./abis/factories/PancakeSwapV3Factory.json
-  #   handler: ./src/v3-pools/mappings/factory/dexs/upheaval-v3-factory.ts
-  #   events:
-  #     - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
+  - name: UltrasolidV3Factory
+    abi_file_path: ./abis/factories/UniswapV3Factory.json
+    handler: ./src/v3-pools/mappings/factory/dexs/ultrasolid-v3-factory.ts
+    events:
+      - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
+
+  - name: UpheavalV3Factory
+    abi_file_path: ./abis/factories/PancakeSwapV3Factory.json
+    handler: ./src/v3-pools/mappings/factory/dexs/upheaval-v3-factory.ts
+    events:
+      - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
 
   - name: SushiSwapV3Factory
     abi_file_path: ./abis/factories/UniswapV3Factory.json
@@ -262,9 +275,16 @@ networks:
         address: 0x10253594A832f967994b44f33411940533302ACb
       - name: KittenSwapAlgebraFactory
         address: 0x5f95E92c338e6453111Fc55ee66D4AafccE661A7
+      - name: UltrasolidV3Factory
+        address: 0xD883a0B7889475d362CEA8fDf588266a3da554A1
+      - name: UpheavalV3Factory
+        address: 0x2566163ea012C9E67c1C7080e0a073f20B548030
+      - name: HxFinanceAlgebraFactory
+        address: 0x41ba59415eC75AC4242dd157F2a7A282F1e75652
       - name: UniswapV3Pool
       - name: AlgebraPool_1_2_1
       - name: AlgebraPool_1_2_2
+      - name: PancakeSwapV3Pool
   - id: 8453 # Base
     start_block: 1371680
     confirmed_block_threshold: 200
@@ -291,12 +311,11 @@ networks:
   - id: 9745 # Plasma
     start_block: 430127
     confirmed_block_threshold: 180
-    rpc: https://plasma-mainnet.g.alchemy.com/v2/${ENVIO_RPC_KEY}
     contracts:
       - name: OkuV3Factory
         address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
       - name: UniswapV3Pool
 
-unordered_multichain_mode: false
+unordered_multichain_mode: true
 preload_handlers: true
 rollback_on_reorg: true
