--- a/config.yaml
+++ b/config.yaml
@@ -237,10 +237,10 @@ contracts:
       - event: ModifyLiquidity(bytes32 indexed id, address indexed sender, int24 tickLower, int24 tickUpper, int256 liquidityDelta, bytes32 salt)
       - event: Swap(bytes32 indexed id, address indexed sender, int128 amount0, int128 amount1, uint160 sqrtPriceX96, uint128 liquidity, int24 tick, uint24 fee)
 
-networks:
+chains:
   - id: 11155111 # Ethereum Sepolia
     start_block: 3518269
-    confirmed_block_threshold: 12
+    max_reorg_depth: 12
     contracts:
       - name: UniswapV3Factory
         address: 0x0227628f3F023bb0B980b67D528571c95c6DaC1c
@@ -252,7 +252,7 @@ networks:
       - name: PancakeSwapV3Pool
   - id: 1 # Ethereum Mainnet
     start_block: 12369621
-    confirmed_block_threshold: 12
+    max_reorg_depth: 12
     contracts:
       - name: UniswapV3Factory
         address: 0x1F98431c8aD98523631AE4a59f267346ea31F984
@@ -267,7 +267,7 @@ networks:
       - name: UniswapV2Pool
   - id: 534352 # Scroll Mainnet
     start_block: 1367
-    confirmed_block_threshold: 5
+    max_reorg_depth: 5
     contracts:
       - name: SushiSwapV3Factory
         address: 0x46B3fDF7b5CDe91Ac049936bF0bDb12c5d22202e
@@ -276,7 +276,7 @@ networks:
       - name: UniswapV3Pool
   - id: 130 # Unichain
     start_block: 0
-    confirmed_block_threshold: 200
+    max_reorg_depth: 200
     contracts:
       - name: UniswapV4PoolManager
         address: 0x1f98400000000000000000000000000000000004
@@ -288,7 +288,7 @@ networks:
       - name: SlipstreamPool
   - id: 999 # HyperEVM
     start_block: 11648
-    confirmed_block_threshold: 6
+    max_reorg_depth: 6
     contracts:
       - name: HyperSwapV3Factory
         address: 0xB1c0fa0B789320044A6F623cFe5eBda9562602E3
@@ -314,7 +314,7 @@ networks:
       - name: SlipstreamPool
   - id: 8453 # Base
     start_block: 1371680
-    confirmed_block_threshold: 200
+    max_reorg_depth: 200
     contracts:
       - name: AerodromeSlipstreamFactory
         address: 0x5e7BB104d84c7CB9B682AaC2F3d509f5F406809A
@@ -335,14 +335,14 @@ networks:
       - name: PancakeSwapV3Pool
   - id: 9745 # Plasma
     start_block: 430127
-    confirmed_block_threshold: 180
+    max_reorg_depth: 180
     contracts:
       - name: OkuV3Factory
         address: 0xcb2436774C3e191c85056d248EF4260ce5f27A9D
       - name: UniswapV3Pool
   - id: 143 # Monad
     start_block: 23058782
-    confirmed_block_threshold: 200
+    max_reorg_depth: 200
     contracts:
       - name: UniswapV3Factory
         address: 0x204faca1764b154221e35c0d20abb3c525710498
@@ -363,7 +363,5 @@ networks:
       - name: AlgebraPool_1_2_0
       - name: AlgebraPool_1_2_2
 
-unordered_multichain_mode: true
-preload_handlers: true
 rollback_on_reorg: true
 address_format: lowercase
