--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es2020", //required for use with BigInt types
-    "lib": [
-      "es2020"
-    ],
+    "target": "es2022",
+    "lib": ["es2022"],
     "allowJs": true,
     "checkJs": false,
     "outDir": "build",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
+    "moduleResolution": "bundler",
+    "noEmit": true,
+
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "module": "CommonJS"
+    "moduleDetection": "force",
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "module": "ESNext",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "include": ["src", "test"]
 }
